# echo-core

./: .env.example  .gitmodules  README.md  pyproject.toml
src/echo/: __init__.py  main.py
src/echo/api/: routes.py
src/echo/config/: settings.py
src/echo/core/: orchestrator.py  state.py
src/echo/llm/: factory.py  providers.py
src/echo/plugins/: __init__.py  sdk_manager.py
src/echo/security/: __init__.py
