[project]
name = "echo-core"
version = "0.1.0"
description = "Echo - Multi-agent orchestration system with plugin management"
authors = [
    { name = "Jonas Kahn", email = "me@ifelse.one" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13,<4.0"
keywords = ["ai", "agents", "echo", "orchestration", "coordination", "langchain", "langgraph", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI"
]
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.74,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langgraph[add] (>=0.6.5,<0.7.0)",
    "langchain-anthropic (>=0.3.18,<0.4.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (>=6.4.0,<7.0.0)",
    "langchain-openai (>=0.3.30,<0.4.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
]

[project.urls]
homepage = "https://github.com/jonaskahn/echo"
documentation = "https://echo.readthedocs.io/"
repository = "https://github.com/jonaskahn/echo.git"
issues = "https://github.com/jonaskahn/echo/issues"

[project.optional-dependencies]
dev = [
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mypy (>=1.17.1,<2.0.0)",
    "ruff (>=0.12.9,<0.13.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "pytest-mock (>=3.14.1,<4.0.0)"
]

[tool.poetry]
packages = [{ include = "echo", from = "src" }]

[tool.poetry.group.local]
optional = true

[tool.poetry.group.local.dependencies]
echo-sdk = { path = "./sdk", develop = true }
echo-plugins = { path = "./plugins", develop = true }

[tool.poetry.group.production]
optional = true

[tool.poetry.group.production.dependencies]
echo-sdk = { git = "https://github.com/jonaskahn/echo-sdk", subdirectory = "src" }
echo-plugins = { git = "https://github.com/jonaskahn/echo-plugins", subdirectory = "src" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.black]
line-length = 120
target-version = ['py313']

[tool.isort]
profile = "black"
line_length =120

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
target-version = "py313"
line-length = 120